Using valueOf is approximately 3.5 times faster than using constructor
Because Using new Integer(int) is guaranteed to always result in a new
object whereas Integer.valueOf(int) allows caching of values to be done
by the compiler, class library, or JVM.